--- a/inventory.ini
+++ b/inventory.ini
@@ -1,4 +1,4 @@
 [webservers]
-server1 ansible_host=192.168.x.1
-server2 ansible_host=192.168.x.2
-server3 ansible_host=192.168.x.3
+server1 ansible_host=192.168.64.3 ansible_user=msingh ansible_ssh_pass=msingh ansible_become_pass=msingh
+server2 ansible_host=192.168.64.4 ansible_user=msingh ansible_ssh_pass=msingh ansible_become_pass=msingh
+server3 ansible_host=192.168.64.5 ansible_user=msingh ansible_ssh_pass=msingh ansible_become_pass=msingh
